Minor fix to letter spacing and state

--- a/public/site.css
+++ b/public/site.css
@@ -8,6 +8,7 @@ body {
     margin-top: 500px;
     font-size: 180px;
     white-space: nowrap;
+    letter-spacing: -5px;
 }
 
 @media only screen and (max-width: 800px) {
